@@ -3614,6 +3614,30 @@ suite structure by including or excluding tasks from the [scheduling]
 and [runtime] sections according to the value of a single logical flag
 defined at the top of the suite.  
 
+\subsection{Naked Dummy Tasks And Strict Validation}
+
+A {\em naked dummy task} appears in the suite graph but has no
+explicit runtime configuration section. Such tasks automatically
+inherit the default ``dummy task'' configuration from the root
+namespace. This is very useful because it allows functional suites to
+be mocked up quickly for test and demonstration purposes by simply
+defining the graph. It is somewhat dangerous, however, because there
+is no way to distinguish an intentional naked dummy task from one
+generated by typographic error: misspelling a task name in the graph
+results in a new naked dummy task replacing the intended task in the
+affected trigger expression; and misspelling a task name in a runtime
+section heading results in the intended task becoming a dummy task
+itself (by divorcing it from its intended runtime config section). 
+
+To avoid this problem any dummy task used in a real suite should not be
+naked - i.e.\ it should have an explicit entry in under the runtime
+section of the suite definition, even if the section is empty. This
+results in exactly the same dummy task behaviour, via implicit
+inheritance from root, but it allows use of 
+\lstinline=cylc validate --strict= 
+to catch errors in task names by failing the suite if any naked dummy
+tasks are detected. 
+
 \section{Task Implementation}
 \label{TaskImplementation}
 
